Fixing parsing of opacity components of rgba() and hsla() that are out of the0 <= x <= 1 range.  Bug 379316, r+sr=dbaron